--- a/cuauhtemovil/src/pages/search/search.scss
+++ b/cuauhtemovil/src/pages/search/search.scss
@@ -1,7 +1,54 @@
 page-search {
-	.scroll-content {
+	/*.scroll-content {
 		//background-color: #82b93a;
 		width: 100%;
       height: 100%;
-	 }
+	 }*/
+	
+	ion-list {
+    margin: 0 !important;
+  }
+ 
+  #please-connect {
+    position: absolute;
+    background-color: #000;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+ 
+  #please-connect p {
+      color: #fff;
+      font-weight: bold;
+      text-align: center;
+      position: relative;
+      font-size: 1.6em;
+      top: 30%;
+  }
+ 
+  .scroll-content {
+      overflow: hidden;
+  }
+ 
+  #map {
+      width: 100%;
+      height: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+	   border-radius: 10px;
+	   border: 3px solid #82b93a;
+  }
+	
+	
+	//DATOS DEL MAPA GOOGLE MAPS
+  .gmnoprint a, .gmnoprint span {
+    display:none;
+  }
+	
+  .gmnoprint div {
+    background:none !important;
+  }
+	
 }
