--- a/cuauhtemovil/src/pages/search/search.scss
+++ b/cuauhtemovil/src/pages/search/search.scss
@@ -1,4 +1,5 @@
 page-search {
+	
 	/*.scroll-content {
 		//background-color: #82b93a;
 		width: 100%;
@@ -59,7 +60,7 @@ page-search {
 	
 	.logo {
 		align-content: center;
-		margin-left: -10%;
+		//margin-left: -20%;
 	}
 
 	
