--- a/cuauhtemovil/src/pages/search-results/search-results.scss
+++ b/cuauhtemovil/src/pages/search-results/search-results.scss
@@ -3,4 +3,10 @@ page-search-results {
 		align-content: center;
 		margin-left: -10%;
 	}
+	
+	#list {
+		border-radius: 10px;
+	   border: 2px solid #82b93a;
+		padding: 10px;
+	}
 }
