--- a/cuauhtemovil/src/pages/search/search.scss
+++ b/cuauhtemovil/src/pages/search/search.scss
@@ -26,6 +26,7 @@ page-search {
       position: relative;
       font-size: 1.6em;
       top: 30%;
+	   padding: 10px;
   }
  
   .scroll-content {
@@ -40,6 +41,7 @@ page-search {
       align-items: center;
 	   border-radius: 10px;
 	   border: 3px solid #82b93a;
+	   padding: 10px;
   }
 	
 	#tiempo {
@@ -48,6 +50,7 @@ page-search {
 		border-radius: 10px;
 	   border: 3px solid #82b93a;
 		margin-top: 10px;
+		padding: 2px;
 	}
 	
 	.main-button {
