--- a/cuauhtemovil/src/pages/create-user/create-user.scss
+++ b/cuauhtemovil/src/pages/create-user/create-user.scss
@@ -1,3 +1,22 @@
 page-create-user {
 
+	#list {
+		border-radius: 10px;
+	    border: 2px solid #82b93a;
+		padding: 5px;
+	}
+	ion-row {
+		  margin-top: -9px;
+		  align-items: center;
+		  text-align: center;
+	 }
+	 
+	 ion-item {
+		  border-radius: 10px;
+		  font-size: 0.9em;
+	 }
+
+	 ion-label, ion-input {
+	 	  font-size: 0.8em;
+	 }
 }
