--- a/cuauhtemovil/src/pages/result/result.scss
+++ b/cuauhtemovil/src/pages/result/result.scss
@@ -3,4 +3,21 @@ page-result {
 		align-content: center;
 		margin-left: -10%;
 	}
+
+	#list {
+		border-radius: 10px;
+	    border: 2px solid #82b93a;
+		padding: 5px;
+	}
+
+	ion-row {
+		  //margin-top: -10px;
+		  align-items: center;
+		  text-align: center;
+	 }
+	 
+	 ion-item {
+		  border-radius: 10px;
+		  font-size: 0.9em;
+	 }
 }
